--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
 
         <div class="flex-wrap"> <!-- flex-wrap wrapper -->
             <div class="flex-wrap-container"> <!-- flex-wrap container  -->
-                <div class="container-title">Weight Lifting</div> <!-- flex-wrap container title  -->
+                <div class="container-title">  Weight Lifting</div> <!-- flex-wrap container title  -->
                 <div class="container-body"><ul> <!-- flex-wrap container body unordered list (bullet points)  -->
                     <li>One joins this DC by going to the gyms and lifting weights. This can include any kind of weighted resistance training to any body part.</li>
                     <li>The goals that are important to this DC are losing weight, staying in shape, gaining muscle and being generally healthy.</li>
                     <li>The roles you can have in this context are distributed upon what specific kind of weight training you are involved with, how often you go, and your specific goals.</li>
+                    <li>The specific role that I have taken on within this DC is that of a full body lifter and one that goes an average of 4 days a week.</li>
                     <li>The kinds of genres and texts you create in this composing situation are videos and short form content that either have the goal of teaching or entertaining.</li>
                     <li>The subjects typically addressed in this DC are goals in terms of body composition and health, as well as specific weighted movements.</li>
                     <li>Some textual conventions within this DC are journaling gym progress, academic resources about the best way to lift specific muscles, and making media interesting and informative.</li>
                     </ul></div>
             </div>
             <div class="flex-wrap-container"> <!-- flex-wrap container  -->
-                <div class="container-title">Information Technology</div> <!-- flex-wrap container title  -->
+                <div class="container-title">  Information Technology</div> <!-- flex-wrap container title  -->
                 <div class="container-body"> <ul> <!-- flex-wrap container body unordered list (bullet points)  -->
                     <li>One joins this DC by getting a job or pursuing an education in technology.</li>
                     <li>The goals and values that are important to this DC are to create technologies that keep networks, applications and other technologies functional and improving them.</li>
                     <li>The roles you can have in this context are any sub-genre of Information Technology such as networking, IT security, and data bases. It will also include different roles such as engineer, technician, architect, manager, etc.</li>
+                    <li>The specific roles that I have taken on within this DC are Security Analyst, Infrastructure Technician, Network Engineer, and IT student.</li>
                     <li>The kinds of genres and texts you create in this composing situation are different kinds of documentations and solutions.</li>
                     <li>The subjects typically addressed in this DC are technology-based products to support other industries.</li>
                     <li>Some textual conventions within this DC are making sure everything correct and documentation is up to date.</li>
@@ -39,22 +41,24 @@
         </div>
         <div class="flex-wrap"> <!-- flex-wrap wrapper -->
             <div class="flex-wrap-container"> <!-- flex-wrap container  -->
-                <div class="container-title">Programming</div> <!-- flex-wrap container title  -->
+                <div class="container-title">  Programming</div> <!-- flex-wrap container title  -->
                 <div class="container-body"><ul> <!-- flex-wrap container body unordered list (bullet points)  -->
                     <li>One joins this DC by pursuing a computer science or software engineering degree, as well as taking a programming job.</li>
                     <li>The goals and values that are important to this DC are creating technology solutions that involve algorithms, data analysis or visualization.</li>
                     <li>The roles you can have in this context are every level of job in programming, as well as different kinds of programmers such as front-end, back-end, and full-stack developers.</li>
+                    <li>The specific role that I have taken on within this DC are both front-end and back-end developement, meaning that I qualify as a full-stack developer.</li>
                     <li>The kinds of genres and texts you create in this composing situation are documentations and programs that involve typing in a specific programming language to accomplish a task.</li>
                     <li>The subjects typically addressed in this DC are technology solutions, efficient algorithms and applications.</li>
                     <li>Some textual conventions within this DC are created meaningful comments within programs, updated documentation and creating readable code.</li>
                 </ul></div>
             </div>
             <div class="flex-wrap-container"> <!-- flex-wrap container  -->
-                <div class="container-title">Xbox Gaming</div> <!-- flex-wrap container title  -->
+                <div class="container-title">  Xbox Gaming</div> <!-- flex-wrap container title  -->
                 <div class="container-body"><ul> <!-- flex-wrap container body unordered list (bullet points)  -->
-                    <li>One joins this DC by getting an Xbox and playing a game on it.
-                    <li>The goals and values that are important to this DC are having fun, passing time and a sense of community.</li>
-                    <li>The roles you can have in this context are very limited to frequent and nonfrequent player, as well as good versus not good at gaming.</li>
+                    <li>One joins this DC by getting any version of an Xbox and playing some kind of video game within any genre.</li>
+                    <li>The goals and values that are important to this DC are having fun, passing time, playing with friends, and a sense of community.</li>
+                    <li>The roles you can have in this context are very limited to frequent and non-frequent player, as well as good versus not good at gaming.</li>
+                    <li>The specific role that I have taken on within this DC are that of someone who plays every so often with competitive shooters, sandbox games, and party/co-op games.</li>
                     <li>The kinds of genres and texts you create in this composing situation are very minimal options other than video guides and written information on new things, assistance material, etc. </li>
                     <li>The subjects typically addressed in this DC are different kinds of video games and their genre, as well as overall feedback of how fun a game is.</li>
                     <li>Some textual conventions within this DC are making interesting and informative content for players to consume.</li>
